# zero2prod

./: .env  Cargo.toml
.github/workflows/: general.yml  workflow.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
