[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.5.1"
tokio = {version = "1.36.0", features = ["macros", "rt-multi-thread"]}
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
sqlx = {version = "0.7.3", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]}
config = "0.14.0"
uuid = {version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
chrono = "0.4.9"
tracing = {version = "0.1.40", features = ["log"]}
tracing-subscriber = {version = "0.3.18", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
secrecy = {version = "0.8.0", features = ["serde"]}

[dev-dependencies]
reqwest = "0.11.24"
once_cell = "1.19.0"
